syntax = "proto3";

package favorite;
option go_package="./favorite";

message GiveLikeRequest {
  uint64 videoId = 1;
  uint64 userId = 2;
}

message CancelLikeRequest{
  uint64 videoId = 1;
  uint64 userId = 2;
}

message Response{
  uint32 code = 1;
  string message = 2;
}

message LikeListRequest{
  uint64 userId = 1;
}


message LikeListResponse{
  uint32 code = 1;
  string message = 2;
  repeated uint64 videoId = 3;
}

service Favorite {
  rpc GiveLike(GiveLikeRequest) returns(Response);
  rpc CancelLike(CancelLikeRequest) returns(Response);
  rpc LikeList(LikeListRequest) returns(LikeListResponse);
  rpc GetCommentList(GetCommentRequest) returns(GetCommentResponse);
  rpc PostComment(PostCommentRequest) returns(PostCommentResponse);
  rpc GetCommentCount(GetCommentCountRequest) returns(GetCommentCountResponse);
  rpc GetFavoriteCount(GetFavoriteCountRequest) returns(GetFavoriteCountResponse);
  rpc IsFavorite(IsFavoriteRequest) returns(IsFavoriteResponse);
}

message IsFavoriteRequest{
  uint64 videoId = 1;
  uint64 userId = 2;
}

message IsFavoriteResponse{
  bool isFavorite = 1;
}

message GetFavoriteCountRequest{
  uint64 videoId = 1;

}

message GetFavoriteCountResponse{
  uint64 count = 1;
}

message GetCommentCountRequest{
  uint64 videoId = 1;
}

message GetCommentCountResponse{
  uint64 count = 1;
}

message GetCommentRequest{
  uint64 videoId = 1;
}

message GetCommentResponse{
  uint32 code = 1;
  string message = 2;
  repeated CommentList commentList = 3;
}

message CommentList{
  uint64 id = 1;
  User user = 2;
  string content = 3;
  string createdAt = 4;
}

message User{
  uint64 id = 1;
  string name = 2;
}

message PostCommentRequest{
  uint64 userId = 1;
  uint64 videoId = 2;
  string content = 3;
}

message PostCommentResponse{
  uint32 code = 1;
  string message = 2;
  string createdAt = 3;
  uint64 contentId = 4;
}

